# routes/index.js
@@ -4,7 +4,7 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('./contacts', require('./contacts'))
+router.use('/contacts', require('./contacts'))
 
 module.exports = router;
 
